--- a/main.css
+++ b/main.css
@@ -25,6 +25,7 @@
   color: #2c3e50;
   font-family: Open Sans, sans-serif;
   margin-left: 80px;
+  margin-bottom: 80px;
   padding: 10px 30px;
   width: 1000px;
   border: 1px solid black;
